--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,8 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1",
-    "@material-ui/core": "4.3.2"
+    "@material-ui/core": "4.3.2",
+    "downloadjs": "1.4.7"
   },
   "scripts": {
     "start": "react-scripts start",
