--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1",
     "@material-ui/core": "4.3.2",
+    "@material-ui/icons": "^4.2.1",
     "downloadjs": "1.4.7"
   },
   "scripts": {
