--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,12 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
+    "react": "16.9.0",
+    "react-dom": "16.9.0",
     "react-scripts": "3.2.0",
     "@material-ui/core": "4.7.0",
-    "@material-ui/icons": "^4.2.1",
-    "downloadjs": "1.4.7"
+    "@material-ui/icons": "4.2.1",
+    "downloadjs": "1.4.7",
+    "jss": "10.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
