--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,13 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "16.9.0",
-    "react-dom": "16.9.0",
-    "react-scripts": "3.2.0",
-    "@material-ui/core": "4.7.0",
-    "@material-ui/icons": "4.2.1",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-scripts": "4.0.1",
+    "@material-ui/core": "4.11.2",
+    "@material-ui/icons": "4.11.2",
     "downloadjs": "1.4.7",
-    "jss": "10.0.0"
+    "jss": "10.5.0",
+    "react-syntax-highlighter": "15.4.3"
+  },
+  "devDependencies": {
+    "prettier": "2.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
