--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,18 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-scripts": "4.0.1",
-    "@material-ui/core": "4.11.2",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-scripts": "4.0.3",
+    "@material-ui/core": "4.11.4",
     "@material-ui/icons": "4.11.2",
     "downloadjs": "1.4.7",
-    "jss": "10.5.0",
+    "jss": "10.6.0",
     "react-syntax-highlighter": "15.4.3"
   },
   "devDependencies": {
-    "prettier": "2.2.1"
+    "prettier": "2.3.0"
   },
+  "proxy": "http://localhost:9090",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -33,7 +34,8 @@
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
-      "last 1 safari version"
+      "last 1 safari version",
+      "last 1 edge version"
     ]
   }
 }
